// Vitest Snapshot v1

exports[`Radio > Radio baseVue demo works fine 1`] = `
<t-space>
  <t-radio>
    未选中项
  </t-radio>
  <t-radio
    checked="true"
  >
    选中项
  </t-radio>
  <t-radio
    checked="true"
    disabled=""
  >
    选中禁用态
  </t-radio>
  <t-radio
    disabled=""
  >
    未选中禁用态
  </t-radio>
</t-space>
`;

exports[`Radio > Radio groupVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-space>
    <t-radio-group
      name="city"
      options="[object Object],[object Object],[object Object],[object Object]"
    />
  </t-space>
  <t-space>
    <t-radio-group
      default-value="1"
    >
      <t-radio
        value="1"
      >
        选项一
      </t-radio>
      <t-radio
        value="2"
      >
        选项二
      </t-radio>
      <t-radio
        value="3"
      >
        选项三
      </t-radio>
      <t-radio
        disabled=""
        value="4"
      >
        选项四
      </t-radio>
    </t-radio-group>
  </t-space>
</t-space>
`;

exports[`Radio > Radio sizeVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-radio-group
    default-value="1"
    size="small"
  >
    <t-radio-button
      value="1"
    >
      选项一
    </t-radio-button>
    <t-radio-button
      value="2"
    >
      选项二
    </t-radio-button>
    <t-radio-button
      value="3"
    >
      选项三
    </t-radio-button>
    <t-radio-button
      value="4"
    >
      选项四
    </t-radio-button>
  </t-radio-group>
  <t-radio-group
    default-value="2"
  >
    <t-radio-button
      value="1"
    >
      选项一
    </t-radio-button>
    <t-radio-button
      value="2"
    >
      选项二
    </t-radio-button>
    <t-radio-button
      value="3"
    >
      选项三
    </t-radio-button>
    <t-radio-button
      value="4"
    >
      选项四
    </t-radio-button>
  </t-radio-group>
  <t-radio-group
    default-value="3"
    size="large"
  >
    <t-radio-button
      value="1"
    >
      选项一
    </t-radio-button>
    <t-radio-button
      value="2"
    >
      选项二
    </t-radio-button>
    <t-radio-button
      value="3"
    >
      选项三
    </t-radio-button>
    <t-radio-button
      value="4"
    >
      选项四
    </t-radio-button>
  </t-radio-group>
</t-space>
`;

exports[`Radio > Radio typeVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="36px"
>
  <t-space
    direction="vertical"
  >
    <h5>
      边框型单选按钮
    </h5>
    <t-radio-group
      default-value="1"
    >
      <t-radio-button
        value="1"
      >
        选项一
      </t-radio-button>
      <t-radio-button
        value="2"
      >
        选项二
      </t-radio-button>
      <t-radio-button
        value="3"
      >
        选项三
      </t-radio-button>
      <t-radio-button
        value="4"
      >
        选项四
      </t-radio-button>
      <t-radio-button
        value="5"
      >
        选项五
      </t-radio-button>
    </t-radio-group>
    <t-radio-group
      default-value="4"
      disabled=""
    >
      <t-radio-button
        value="1"
      >
        选项一
      </t-radio-button>
      <t-radio-button
        value="2"
      >
        选项二
      </t-radio-button>
      <t-radio-button
        value="3"
      >
        选项三
      </t-radio-button>
      <t-radio-button
        value="4"
      >
        选中禁用态
      </t-radio-button>
      <t-radio-button>
        未选中禁用态
      </t-radio-button>
    </t-radio-group>
  </t-space>
  <t-space
    direction="vertical"
  >
    <h5>
      填充型单选按钮
    </h5>
    <t-space>
      <t-radio-group
        default-value="1"
        variant="default-filled"
      >
        <t-radio-button
          value="1"
        >
          选项一
        </t-radio-button>
        <t-radio-button
          value="2"
        >
          选项二
        </t-radio-button>
        <t-radio-button
          value="3"
        >
          选项三
        </t-radio-button>
        <t-radio-button
          value="4"
        >
          选项四
        </t-radio-button>
        <t-radio-button
          value="5"
        >
          选项五
        </t-radio-button>
      </t-radio-group>
    </t-space>
    <t-space>
      <t-radio-group
        default-value="1"
        variant="primary-filled"
      >
        <t-radio-button
          value="1"
        >
          选项一
        </t-radio-button>
        <t-radio-button
          value="2"
        >
          选项二
        </t-radio-button>
        <t-radio-button
          value="3"
        >
          选项三
        </t-radio-button>
        <t-radio-button
          value="4"
        >
          选项四
        </t-radio-button>
        <t-radio-button
          value="5"
        >
          选项五
        </t-radio-button>
      </t-radio-group>
    </t-space>
    <t-space>
      <t-radio-group
        default-value="4"
        variant="default-filled"
      >
        <t-radio-button
          disabled=""
          value="1"
        >
          选项一
        </t-radio-button>
        <t-radio-button
          disabled=""
          value="2"
        >
          选项二
        </t-radio-button>
        <t-radio-button
          disabled=""
          value="3"
        >
          选项三
        </t-radio-button>
        <t-radio-button
          disabled=""
          value="4"
        >
          选中禁用态
        </t-radio-button>
        <t-radio-button
          disabled=""
          value="5"
        >
          未选中禁用态
        </t-radio-button>
      </t-radio-group>
    </t-space>
    <t-space>
      <t-radio-group
        default-value="4"
        variant="primary-filled"
      >
        <t-radio-button
          disabled=""
          value="1"
        >
          选项一
        </t-radio-button>
        <t-radio-button
          disabled=""
          value="2"
        >
          选项二
        </t-radio-button>
        <t-radio-button
          disabled=""
          value="3"
        >
          选项三
        </t-radio-button>
        <t-radio-button
          disabled=""
          value="4"
        >
          选中禁用态
        </t-radio-button>
        <t-radio-button
          disabled=""
          value="5"
        >
          未选中禁用态
        </t-radio-button>
      </t-radio-group>
    </t-space>
  </t-space>
</t-space>
`;
